--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
     <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -424,4 +424,5 @@
     <!-- custom js -->
     <script src="js/script.js"></script>
   </body>
+
 </html>
