--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
           <!--<a href="https://twitter.com/yourusername" target="_blank"><i class="bx bxl-twitter"></i></a> -->
         </div>
 
-        <a href="files/Sachin-Resume.pdf" class="btn">Download CV</a>
+        <a href="Sachin-Resume.pdf" class="btn">Download CV</a>
         <a href="#contact" class="btn btn-secondary">Hire Me</a>
       </div>
 
       <div class="home-img">
-        <img src="images/home.png" alt="Sachin Chinnasamy">
+        <img src="home.png" alt="Sachin Chinnasamy">
       </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
       <div class="about-img">
-        <img src="images/about.sachin.jpg" alt="About Sachin">
+        <img src="about.sachin.jpg" alt="About Sachin">
       </div>
 
       <div class="about-content">
@@ -264,7 +264,7 @@
 
   <div class="portfolio-container">
     <div class="portfolio-box">
-      <img src="images/portfolio1.jpg" alt="E-commerce Website">
+      <img src="portfolio1.jpg" alt="E-commerce Website">
       <div class="portfolio-layer">
         <h4>E-commerce Website</h4>
         <p>Full-featured e-commerce platform built with Django, HTML, CSS, Bootstrap and MySQL</p>
@@ -283,7 +283,7 @@
     </div>
 
     <div class="portfolio-box">
-      <img src="images/portfolio2.jpg" alt="SkillCheck Platform">
+      <img src="portfolio2.jpg" alt="SkillCheck Platform">
       <div class="portfolio-layer">
         <h4>SkillCheck Quiz Platform</h4>
         <p>Real-time quiz platform built with Blazor WebAssembly and ASP.NET Core</p>
@@ -302,7 +302,7 @@
     </div>
 
     <div class="portfolio-box">
-      <img src="images/portfolio3.jpg" alt="AI Question Generation">
+      <img src="portfolio3.jpg" alt="AI Question Generation">
       <div class="portfolio-layer">
         <h4>AI Question Generation</h4>
         <p>AI-based question generation system integrated into SkillCheck platform</p>
@@ -426,4 +426,5 @@
   </body>
 
 </html>
+
 
